# impuestos_package

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
examples/: ejemplo_basico.py  ejemplo_demo_calculadora_estructuras.py
examples/ejemplos_avanzados/: ejemplo_arbol_binario.py  ejemplo_colas_contribuyentes.py  ejemplo_completo.py  ejemplo_multiple_tributos.py  ejemplo_pilas_contribuyentes.py  ejemplo_sanciones.py
src/impuestos_package/: __init__.py  calculadora.py  estructuras.py  interes.py  main.py  mv.py  sancion.py  ufv.py
tests/: test_calculadora.py  test_estructuras.py  test_integracion.py  test_interes.py  test_mv.py  test_sancion.py  test_ufv.py
