[metadata]
name = impuestos_package
version = 0.0.1
description = Librería para calcular deudas tributarias con UFV, intereses y sanciones
long_description = file:README.md
long_description_content_type = text/markdown
author = MARTHAg
author_email =MARTHAg@tecba.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7


Install_requires =
    consulta-ufv-bolivia==0.1
    

[options.packages.find]
where=src
